--- a/about.html
+++ b/about.html
@@ -29,43 +29,53 @@
     <!-- Topbar Start -->
     <div class="container-fluid bg-dark">
         <div class="row py-2 px-lg-5">
-            <div class="col-lg-6 text-center text-lg-left mb-2 mb-lg-0">
-                <div class="d-inline-flex align-items-center text-white">
-                    <small><i class="fa fa-phone-alt mr-2"></i>+1 (862)-3375</small>
-                    <small class="px-3">|</small>
-                    <small><i class="fa fa-envelope mr-2"></i>carltontaylor@bellsouth.net</small>
-                </div>
+          <div class="col-lg-6 text-center text-lg-left mb-2 mb-lg-0">
+            <div class="d-inline-flex align-items-center text-white">
+              <small><i class="fa fa-phone-alt mr-2"></i>+1(318) 294-2601</small>
+              <small class="px-3">|</small>
+              <small
+                ><i class="fa fa-envelope mr-2"></i
+                >info@chesslogisticsllc.com</small
+              >
             </div>
-            <div class="col-lg-6 text-center text-lg-right">
-                <div class="d-inline-flex align-items-center">
-                    <a class="text-white px-2" href="">
-                        <i class="fab fa-facebook-f"></i>
-                    </a>
-                    <a class="text-white px-2" href="">
-                        <i class="fab fa-twitter"></i>
-                    </a>
-                    <a class="text-white px-2" href="">
-                        <i class="fab fa-linkedin-in"></i>
-                    </a>
-                    <a class="text-white px-2" href="">
-                        <i class="fab fa-instagram"></i>
-                    </a>
-                    <a class="text-white pl-2" href="">
-                        <i class="fab fa-youtube"></i>
-                    </a>
-                </div>
+          </div>
+          <div class="col-lg-6 text-center text-lg-right">
+            <div class="d-inline-flex align-items-center">
+              <a class="text-white px-2" href="">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+              <a class="text-white px-2" href="">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a class="text-white px-2" href="">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+              <a class="text-white px-2" href="">
+                <i class="fab fa-instagram"></i>
+              </a>
+              <a class="text-white pl-2" href="">
+                <i class="fab fa-youtube"></i>
+              </a>
             </div>
+          </div>
         </div>
-    </div>
-    <!-- Topbar End -->
+      </div>
+      <!-- Topbar End -->
 
 
     <!-- Navbar Start -->
     <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-lg-5">
             <a href="index.html" class="navbar-brand ml-lg-3">
-                <h1 class="m-0 display-5 text-uppercase text-primary"><i class="fa fa-truck mr-2"></i>Faster</h1>
-            </a>
+                <h1 class="m-0 display-5 text-uppercase text-primary">
+                  <img
+                    src="img\CLS logo.jpg"
+                    alt="cls logo"
+                    class="mr-2"
+                    style="height: 2em; width: auto"
+                  />
+                </h1>
+              </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -108,73 +118,132 @@
     <!-- About Start -->
     <div class="container-fluid py-5">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-5 pb-4 pb-lg-0">
-                    <img class="img-fluid w-100" src="img/about.jpg" alt="">
-                    <div class="bg-primary text-dark text-center p-4">
-                        <h3 class="m-0">25+ Years Experience</h3>
-                    </div>
-                </div>
-                <div class="col-lg-7">
-                    <h6 class="text-primary text-uppercase font-weight-bold">About Us</h6>
-                    <h1 class="mb-4">Trusted & Faster Logistic Service Provider</h1>
-                    <p class="mb-4">Dolores lorem lorem ipsum sit et ipsum. Sadip sea amet diam dolore sed et. Sit rebum labore sit sit ut vero no sit. Et elitr stet dolor sed sit et sed ipsum et kasd ut. Erat duo eos et erat sed diam duo</p>
-                    <div class="d-flex align-items-center pt-2">
-                        <button type="button" class="btn-play" data-toggle="modal"
-                            data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-target="#videoModal">
-                            <span></span>
-                        </button>
-                        <h5 class="font-weight-bold m-0 ml-4">Play Video</h5>
-                    </div>
-                </div>
+          <div class="row align-items-center">
+            <div class="col-lg-5 pb-4 pb-lg-0">
+              <img class="img-fluid w-100" src="img\truck on road.jpg" alt="" />
+              <div class="bg-primary text-dark text-center p-4">
+                <h3 class="m-0">Years of Proven Excellence.</h3>
+              </div>
             </div>
+            <div class="col-lg-7">
+              <h6 class="text-primary text-uppercase font-weight-bold">
+                About Us
+              </h6>
+              <h1 class="mb-4">Your Move,Our Logistics Excellence</h1>
+              <p class="mb-4">
+                Welcome to Chess Logistics Services LLC, your strategic partner in
+                freight brokerage solutions. With a focus on precision,
+                reliability, and personalized service, we stand as a bridge
+                between shippers and carriers, ensuring seamless and efficient
+                transportation solutions.
+              </p>
+              <div class="d-flex align-items-center pt-2">
+                <button
+                  type="button"
+                  class="btn-play"
+                  data-toggle="modal"
+                  data-src="https://www.youtube.com/embed/xh7_uzq7UQE"
+                  data-target="#videoModal"
+                >
+                  <span></span>
+                </button>
+                <h5 class="font-weight-bold m-0 ml-4">Play Video</h5>
+              </div>
+            </div>
+          </div>
         </div>
         <!-- Video Modal -->
-        <div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-body">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>        
-                        <!-- 16:9 aspect ratio -->
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="" id="video"  allowscriptaccess="always" allow="autoplay"></iframe>
-                        </div>
-                    </div>
+        <div
+          class="modal fade"
+          id="videoModal"
+          tabindex="-1"
+          role="dialog"
+          aria-labelledby="exampleModalLabel"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-body">
+                <button
+                  type="button"
+                  class="close"
+                  data-dismiss="modal"
+                  aria-label="Close"
+                >
+                  <span aria-hidden="true">&times;</span>
+                </button>
+                <!-- 16:9 aspect ratio -->
+                <div class="embed-responsive embed-responsive-16by9">
+                  <iframe
+                    class="embed-responsive-item"
+                    src=""
+                    id="video"
+                    allowscriptaccess="always"
+                    allow="autoplay"
+                  ></iframe>
                 </div>
+              </div>
             </div>
+          </div>
         </div>
-    </div>
-    <!-- About End -->
+      </div>
+      <!-- About End -->
 
 
-    <!-- Features Start -->
+    <!-- Why Choose Us Start -->
     <div class="container-fluid bg-secondary my-5">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-5">
-                    <img class="img-fluid w-100" src="img/feature.jpg" alt="">
-                </div>
-                <div class="col-lg-7 py-5 py-lg-0">
-                    <h6 class="text-primary text-uppercase font-weight-bold">Why Choose Us</h6>
-                    <h1 class="mb-4">Faster, Safe and Trusted Logistics Services</h1>
-                    <p class="mb-4">Dolores lorem lorem ipsum sit et ipsum. Sadip sea amet diam dolore sed et. Sit rebum labore sit sit ut vero no sit. Et elitr stet dolor sed sit et sed ipsum et kasd ut. Erat duo eos et erat sed diam duo</p>
-                    <ul class="list-inline">
-                        <li><h6><i class="far fa-dot-circle text-primary mr-3"></i>Best In Industry</h6>
-                        <li><h6><i class="far fa-dot-circle text-primary mr-3"></i>Emergency Services</h6></li>
-                        <li><h6><i class="far fa-dot-circle text-primary mr-3"></i>24/7 Customer Support</h6></li>
-                    </ul>
-                    <a href="" class="btn btn-primary mt-3 py-2 px-4">Learn More</a>
-                </div>
+          <div class="row align-items-center">
+            <div class="col-lg-5">
+              <img
+                class="img-fluid w-100"
+                src="img\trucks interchange.jpg"
+                alt="Trucks Interchange"
+              />
             </div>
+            <div class="col-lg-7 py-5 py-lg-0">
+              <h6 class="text-primary text-uppercase font-weight-bold">
+                Why Choose Us
+              </h6>
+              <h1 class="mb-4">Your Trusted Freight Broker Partner</h1>
+              <p class="mb-4">
+                At Chess Logistics Services LLC, we go the extra mile to provide
+                faster, safer, and trusted logistics solutions. With a focus on
+                excellence and reliability, we connect businesses with seamless
+                transportation services.
+              </p>
+              <ul class="list-inline">
+                <li>
+                  <h6>
+                    <i class="far fa-dot-circle text-primary mr-3"></i
+                    >Best-in-Class Brokerage
+                  </h6>
+                </li>
+                <li>
+                  <h6>
+                    <i class="far fa-dot-circle text-primary mr-3"></i>Responsive
+                    Emergency Services
+                  </h6>
+                </li>
+                <li>
+                  <h6>
+                    <i class="far fa-dot-circle text-primary mr-3"></i>24/7
+                    Dedicated Customer Support
+                  </h6>
+                </li>
+              </ul>
+              <a href="about.html" class="btn btn-primary mt-3 py-2 px-4"
+                >Learn More</a
+              >
+            </div>
+          </div>
         </div>
-    </div>
-    <!-- Features End -->
+      </div>
+      <!-- Why Choose Us End -->
 
 
     <!-- Team Start -->
-    <div class="container-fluid pt-5">
+    <!-- <div class="container-fluid pt-5">
         <div class="container">
             <div class="text-center pb-2">
                 <h6 class="text-primary text-uppercase font-weight-bold">Delivery Team</h6>
@@ -251,82 +320,59 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Team End -->
 
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-white mt-5 py-5 px-sm-3 px-md-5">
-        <div class="row pt-5">
-            <div class="col-lg-7 col-md-6">
-                <div class="row">
-                    <div class="col-md-6 mb-5">
-                        <h3 class="text-primary mb-4">Get In Touch</h3>
-                        <p><i class="fa fa-map-marker-alt mr-2"></i>123 Street, New York, USA</p>
-                        <p><i class="fa fa-phone-alt mr-2"></i>+012 345 67890</p>
-                        <p><i class="fa fa-envelope mr-2"></i>info@example.com</p>
-                        <div class="d-flex justify-content-start mt-4">
-                            <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                            <a class="btn btn-outline-light btn-social" href="#"><i class="fab fa-instagram"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 mb-5">
-                        <h3 class="text-primary mb-4">Quick Links</h3>
-                        <div class="d-flex flex-column justify-content-start">
-                            <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                            <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About Us</a>
-                            <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Services</a>
-                            <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Pricing Plan</a>
-                            <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-5 col-md-6 mb-5">
-                <h3 class="text-primary mb-4">Newsletter</h3>
-                <p>Rebum labore lorem dolores kasd est, et ipsum amet et at kasd, ipsum sea tempor magna tempor. Accu kasd sed ea duo ipsum. Dolor duo eirmod sea justo no lorem est diam</p>
-                <div class="w-100">
-                    <div class="input-group">
-                        <input type="text" class="form-control border-light" style="padding: 30px;" placeholder="Your Email Address">
-                        <div class="input-group-append">
-                            <button class="btn btn-primary px-4">Sign Up</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container-fluid bg-dark text-white border-top py-4 px-sm-3 px-md-5" style="border-color: #3E3E4E !important;">
+    <div class="container-fluid bg-dark text-white py-4 px-sm-3 px-md-5">
         <div class="row">
-            <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
-                <p class="m-0 text-white">&copy; <a href="#">Your Site Name</a>. All Rights Reserved. 
-				
-				<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-				Designed by <a href="https://htmlcodex.com">HTML Codex</a>
-                </p>
+          <div class="col-md-6 mb-3">
+            <h4 class="text-primary mb-3">Contact Information</h4>
+            <p>
+              <i class="fa fa-map-marker-alt mr-2"></i>6646 Highway 1
+              Coushatta, LA 71019
+            </p>
+            <p><i class="fa fa-phone-alt mr-2"></i>+1(318) 294-2601</p>
+            <p><i class="fa fa-envelope mr-2"></i>info@chesslogisticsllc.com</p>
+          </div>
+          <div class="col-md-6 mb-3">
+            <h4 class="text-primary mb-3">Quick Links</h4>
+            <div class="d-flex flex-column">
+              <a class="text-white mb-2" href="#home">Home</a>
+              <a class="text-white mb-2" href="#about">About Us</a>
+              <a class="text-white mb-2" href="#services">Our Services</a>
+              <a class="text-white mb-2" href="#contact">Contact Us</a>
             </div>
-            <div class="col-lg-6 text-center text-md-right">
-                <ul class="nav d-inline-flex">
-                    <li class="nav-item">
-                        <a class="nav-link text-white py-0" href="#">Privacy</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white py-0" href="#">Terms</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white py-0" href="#">FAQs</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white py-0" href="#">Help</a>
-                    </li>
-                </ul>
-            </div>
+          </div>
         </div>
-    </div>
-    <!-- Footer End -->
-
+        <div class="row">
+          <div class="col-md-6 mb-3">
+            <h4 class="text-primary mb-3">Stay Connected</h4>
+            <div class="d-flex">
+              <a class="btn btn-outline-light btn-social mr-2" href="#"
+                ><i class="fab fa-twitter"></i
+              ></a>
+              <a class="btn btn-outline-light btn-social mr-2" href="#"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
+              <a class="btn btn-outline-light btn-social mr-2" href="#"
+                ><i class="fab fa-linkedin-in"></i
+              ></a>
+              <a class="btn btn-outline-light btn-social" href="#"
+                ><i class="fab fa-instagram"></i
+              ></a>
+            </div>
+          </div>
+          <div class="col-md-6 text-md-right">
+            <p class="m-0 text-white">
+              &copy; <a href="#">Chess Logistics Services</a>. All Rights
+              Reserved. Designed by <a href="https://htmlcodex.com">JRMHD</a>
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- Footer End -->
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary back-to-top"><i class="fa fa-angle-double-up"></i></a>
