--- a/contact.html
+++ b/contact.html
@@ -26,46 +26,59 @@
 </head>
 
 <body>
-    <!-- Topbar Start -->
-    <div class="container-fluid bg-dark">
-        <div class="row py-2 px-lg-5">
-            <div class="col-lg-6 text-center text-lg-left mb-2 mb-lg-0">
-                <div class="d-inline-flex align-items-center text-white">
-                    <small><i class="fa fa-phone-alt mr-2"></i>+1 (862)-3375</small>
-                    <small class="px-3">|</small>
-                    <small><i class="fa fa-envelope mr-2"></i>carltontaylor@bellsouth.net</small>
-                </div>
-            </div>
-            <div class="col-lg-6 text-center text-lg-right">
-                <div class="d-inline-flex align-items-center">
-                    <a class="text-white px-2" href="">
-                        <i class="fab fa-facebook-f"></i>
-                    </a>
-                    <a class="text-white px-2" href="">
-                        <i class="fab fa-twitter"></i>
-                    </a>
-                    <a class="text-white px-2" href="">
-                        <i class="fab fa-linkedin-in"></i>
-                    </a>
-                    <a class="text-white px-2" href="">
-                        <i class="fab fa-instagram"></i>
-                    </a>
-                    <a class="text-white pl-2" href="">
-                        <i class="fab fa-youtube"></i>
-                    </a>
-                </div>
-            </div>
+   <!-- Topbar Start -->
+   <div class="container-fluid bg-dark">
+    <div class="row py-2 px-lg-5">
+      <div class="col-lg-6 text-center text-lg-left mb-2 mb-lg-0">
+        <div class="d-inline-flex align-items-center text-white">
+          <small><i class="fa fa-phone-alt mr-2"></i>+1(318) 294-2601</small>
+          <small class="px-3">|</small>
+          <small
+            ><i class="fa fa-envelope mr-2"></i
+            >info@chesslogisticsllc.com</small
+          >
         </div>
+      </div>
+      <div class="col-lg-6 text-center text-lg-right">
+        <div class="d-inline-flex align-items-center">
+          <a class="text-white px-2" href="">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a class="text-white px-2" href="">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a class="text-white px-2" href="">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+          <a class="text-white px-2" href="">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a class="text-white pl-2" href="">
+            <i class="fab fa-youtube"></i>
+          </a>
+        </div>
+      </div>
     </div>
-    <!-- Topbar End -->
+  </div>
+  <!-- Topbar End -->
 
 
     <!-- Navbar Start -->
     <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-lg-5">
-            <a href="index.html" class="navbar-brand ml-lg-3">
+            <!-- <a href="index.html" class="navbar-brand ml-lg-3">
                 <h1 class="m-0 display-5 text-uppercase text-primary"><i class="fa fa-truck mr-2"></i>Faster</h1>
-            </a>
+            </a> -->
+            <a href="index.html" class="navbar-brand ml-lg-3">
+                <h1 class="m-0 display-5 text-uppercase text-primary">
+                  <img
+                    src="img\CLS logo.jpg"
+                    alt="cls logo"
+                    class="mr-2"
+                    style="height: 2em; width: auto"
+                  />
+                </h1>
+              </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -105,129 +118,86 @@
     <!-- Header End -->
 
 
-    <!-- Contact Start -->
-    <div class="container-fluid py-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-5 pb-4 pb-lg-0">
-                    <div class="bg-primary text-dark text-center p-4">
-                        <h4 class="m-0"><i class="fa fa-map-marker-alt text-white mr-2"></i>123 Street, New York, USA</h4>
-                    </div>
-                    <iframe style="width: 100%; height: 470px;"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
-                        frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-                </div>
-                <div class="col-lg-7">
-                    <h6 class="text-primary text-uppercase font-weight-bold">Contact Us</h6>
-                    <h1 class="mb-4">Contact For Any Queries</h1>
-                    <div class="contact-form bg-secondary" style="padding: 30px;">
-                        <div id="success"></div>
-                        <form name="sentMessage" id="contactForm" novalidate="novalidate">
-                            <div class="control-group">
-                                <input type="text" class="form-control border-0 p-4" id="name" placeholder="Your Name"
-                                    required="required" data-validation-required-message="Please enter your name" />
-                                <p class="help-block text-danger"></p>
-                            </div>
-                            <div class="control-group">
-                                <input type="email" class="form-control border-0 p-4" id="email" placeholder="Your Email"
-                                    required="required" data-validation-required-message="Please enter your email" />
-                                <p class="help-block text-danger"></p>
-                            </div>
-                            <div class="control-group">
-                                <input type="text" class="form-control border-0 p-4" id="subject" placeholder="Subject"
-                                    required="required" data-validation-required-message="Please enter a subject" />
-                                <p class="help-block text-danger"></p>
-                            </div>
-                            <div class="control-group">
-                                <textarea class="form-control border-0 py-3 px-4" rows="3" id="message" placeholder="Message"
-                                    required="required"
-                                    data-validation-required-message="Please enter your message"></textarea>
-                                <p class="help-block text-danger"></p>
-                            </div>
-                            <div>
-                                <button class="btn btn-primary py-3 px-4" type="submit" id="sendMessageButton">Send
-                                    Message</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Contact End -->
-
-
-    <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-white mt-5 py-5 px-sm-3 px-md-5">
-        <div class="row pt-5">
-            <div class="col-lg-7 col-md-6">
-                <div class="row">
-                    <div class="col-md-6 mb-5">
-                        <h3 class="text-primary mb-4">Get In Touch</h3>
-                        <p><i class="fa fa-map-marker-alt mr-2"></i>123 Street, New York, USA</p>
-                        <p><i class="fa fa-phone-alt mr-2"></i>+012 345 67890</p>
-                        <p><i class="fa fa-envelope mr-2"></i>info@example.com</p>
-                        <div class="d-flex justify-content-start mt-4">
-                            <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                            <a class="btn btn-outline-light btn-social" href="#"><i class="fab fa-instagram"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 mb-5">
-                        <h3 class="text-primary mb-4">Quick Links</h3>
-                        <div class="d-flex flex-column justify-content-start">
-                            <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                            <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About Us</a>
-                            <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Services</a>
-                            <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Pricing Plan</a>
-                            <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-5 col-md-6 mb-5">
-                <h3 class="text-primary mb-4">Newsletter</h3>
-                <p>Rebum labore lorem dolores kasd est, et ipsum amet et at kasd, ipsum sea tempor magna tempor. Accu kasd sed ea duo ipsum. Dolor duo eirmod sea justo no lorem est diam</p>
-                <div class="w-100">
-                    <div class="input-group">
-                        <input type="text" class="form-control border-light" style="padding: 30px;" placeholder="Your Email Address">
-                        <div class="input-group-append">
-                            <button class="btn btn-primary px-4">Sign Up</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container-fluid bg-dark text-white border-top py-4 px-sm-3 px-md-5" style="border-color: #3E3E4E !important;">
+   <!-- Contact Start -->
+<div class="container-fluid py-5">
+    <div class="container">
         <div class="row">
-            <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
-                <p class="m-0 text-white">&copy; <a href="#">Your Site Name</a>. All Rights Reserved. 
-				
-				<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-				Designed by <a href="https://htmlcodex.com">HTML Codex</a>
-                </p>
+            <div class="col-lg-5 pb-4 pb-lg-0">
+                <div class="bg-primary text-dark text-center p-4">
+                    <h4 class="m-0"><i class="fa fa-map-marker-alt text-white mr-2"></i>6646 Highway 1
+                        Coushatta, LA 71019</h4>
+                </div>
+                <iframe style="width: 100%; height: 470px;"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3384.650318414588!2d-93.35827092540035!3d31.970381974011083!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8630eb41e79d5d3b%3A0x5d9767b29d045e32!2s6646%20LA-1%2C%20Coushatta%2C%20LA%2071019%2C%20USA!5e0!3m2!1sen!2ske!4v1692632728628!5m2!1sen!2ske"
+                    frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
-            <div class="col-lg-6 text-center text-md-right">
-                <ul class="nav d-inline-flex">
-                    <li class="nav-item">
-                        <a class="nav-link text-white py-0" href="#">Privacy</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white py-0" href="#">Terms</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white py-0" href="#">FAQs</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white py-0" href="#">Help</a>
-                    </li>
-                </ul>
+            <div class="col-lg-7">
+                <h6 class="text-primary text-uppercase font-weight-bold">Contact Us</h6>
+                <h1 class="mb-4">Contact For Any Queries</h1>
+                <div class="contact-info bg-secondary p-4">
+                    <p><i class="fa fa-phone-alt mr-2"></i>+1(318) 294-2601</p>
+                    <p><i class="fa fa-envelope mr-2"></i>info@chesslogisticsllc.com</p>
+                    <p><i class="fa fa-clock mr-2"></i>Monday - Friday, 8:00 AM - 5:00 PM</p>
+                    <p><i class="fa fa-map-marker-alt mr-2"></i>6646 Highway 1
+                        Coushatta, LA 71019</p>
+                    <a href="https://goo.gl/maps/sbuaDGRPgiMheT6L7" target="_blank" class="btn btn-primary py-3 px-4">Get Directions</a>
+                </div>
             </div>
         </div>
     </div>
-    <!-- Footer End -->
+</div>
+<!-- Contact End -->
+
+
+     <!-- Footer Start -->
+     <div class="container-fluid bg-dark text-white py-4 px-sm-3 px-md-5">
+        <div class="row">
+          <div class="col-md-6 mb-3">
+            <h4 class="text-primary mb-3">Contact Information</h4>
+            <p>
+              <i class="fa fa-map-marker-alt mr-2"></i>6646 Highway 1
+              Coushatta, LA 71019
+            </p>
+            <p><i class="fa fa-phone-alt mr-2"></i>+1(318) 294-2601</p>
+            <p><i class="fa fa-envelope mr-2"></i>info@chesslogisticsllc.com</p>
+          </div>
+          <div class="col-md-6 mb-3">
+            <h4 class="text-primary mb-3">Quick Links</h4>
+            <div class="d-flex flex-column">
+              <a class="text-white mb-2" href="#home">Home</a>
+              <a class="text-white mb-2" href="#about">About Us</a>
+              <a class="text-white mb-2" href="#services">Our Services</a>
+              <a class="text-white mb-2" href="#contact">Contact Us</a>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6 mb-3">
+            <h4 class="text-primary mb-3">Stay Connected</h4>
+            <div class="d-flex">
+              <a class="btn btn-outline-light btn-social mr-2" href="#"
+                ><i class="fab fa-twitter"></i
+              ></a>
+              <a class="btn btn-outline-light btn-social mr-2" href="#"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
+              <a class="btn btn-outline-light btn-social mr-2" href="#"
+                ><i class="fab fa-linkedin-in"></i
+              ></a>
+              <a class="btn btn-outline-light btn-social" href="#"
+                ><i class="fab fa-instagram"></i
+              ></a>
+            </div>
+          </div>
+          <div class="col-md-6 text-md-right">
+            <p class="m-0 text-white">
+              &copy; <a href="#">Chess Logistics Services</a>. All Rights
+              Reserved. Designed by <a href="https://htmlcodex.com">JRMHD</a>
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- Footer End -->
 
 
     <!-- Back to Top -->
