Your commit message here

--- a/index.html
+++ b/index.html
@@ -884,7 +884,7 @@
                   <img
                     class="rounded-circle"
                     style="width: 40px; height: 40px"
-                    src="img/user.jpg"
+                    src="img\Carlton.jpg"
                     alt=""
                   />
                   <a class="text-muted ml-2" href="">Carlton Taylor</a>
@@ -926,7 +926,7 @@
                   <img
                     class="rounded-circle"
                     style="width: 40px; height: 40px"
-                    src="img/user.jpg"
+                    src="img\Carlton.jpg"
                     alt=""
                   />
                   <a class="text-muted ml-2" href="">Carlton Taylor</a>
@@ -963,8 +963,8 @@
         <div class="col-md-6 mb-3">
           <h4 class="text-primary mb-3">Contact Information</h4>
           <p>
-            <i class="fa fa-map-marker-alt mr-2"></i>6646 Highway 1
-            Coushatta, LA 71019
+            <i class="fa fa-map-marker-alt mr-2"></i>6646 Highway 1 Coushatta,
+            LA 71019
           </p>
           <p><i class="fa fa-phone-alt mr-2"></i>+1(318) 294-2601</p>
           <p><i class="fa fa-envelope mr-2"></i>info@chesslogisticsllc.com</p>
