--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,12 @@
 <html lang="en">
 
 <head>
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="web.ico" type="image/x-icon" />
     <meta charset="utf-8">
-    <title>Chess Logistics Services Services LLC</title>
+    
+
+    <title>Chess Logistics Contact</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -192,7 +196,8 @@
           <div class="col-md-6 text-md-right">
             <p class="m-0 text-white">
               &copy; <a href="#">Chess Logistics Services</a>. All Rights
-              Reserved. Designed by <a href="https://htmlcodex.com">JRMHD</a>
+              Reserved. Designed by <a href="https://wa.me/19293905426" target="_blank" >JRMHD</a>
+              <a href="https://htmlcodex.com"></a>
             </p>
           </div>
         </div>
