--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="web.ico" type="image/x-icon" />
+
     <meta charset="utf-8" />
-    <title>Chess Logistics Services Services LLC</title>
+
+    <title>Chess Logistics Homepage</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="Free HTML Templates" name="keywords" />
     <meta content="Free HTML Templates" name="description" />
@@ -874,7 +878,7 @@
                 class="position-absolute bg-primary d-flex flex-column align-items-center justify-content-center rounded-circle"
                 style="width: 60px; height: 60px; bottom: -30px; right: 30px"
               >
-                <h4 class="font-weight-bold mb-n1">25</h4>
+                <h4 class="font-weight-bold mb-n1">30</h4>
                 <small class="text-white text-uppercase">AUG</small>
               </div>
             </div>
@@ -916,7 +920,7 @@
                 class="position-absolute bg-primary d-flex flex-column align-items-center justify-content-center rounded-circle"
                 style="width: 60px; height: 60px; bottom: -30px; right: 30px"
               >
-                <h4 class="font-weight-bold mb-n1">25</h4>
+                <h4 class="font-weight-bold mb-n1">30</h4>
                 <small class="text-white text-uppercase">AUG</small>
               </div>
             </div>
@@ -1000,7 +1004,8 @@
         <div class="col-md-6 text-md-right">
           <p class="m-0 text-white">
             &copy; <a href="#">Chess Logistics Services</a>. All Rights
-            Reserved. Designed by <a href="https://htmlcodex.com">JRMHD</a>
+            Reserved. Designed by <a href="https://wa.me/19293905426" target="_blank" >JRMHD</a>
+            <a href="https://htmlcodex.com"></a>
           </p>
         </div>
       </div>
